--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("/assets/background.jpg");
+  background-image: url("../assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
